# week-2-robotics-assignment-marin-hyatt

project_2_4/: CMakeLists.txt  light_controller.cpp  project_2_4.cpp
